syntax = "proto3";

import "google/protobuf/timestamp.proto";

package spotify;

message Track {
    string track_id = 1;
    string track_name = 2;
    string artist_name = 3;
    int64 track_duration = 4;
}

message TrackArray {
    repeated Track tracks = 1;
}

message PlaybackState {
    string device_id = 1;
    uint32 device_volume = 2;
    bool shuffle = 3;
    optional uint64 progress_ms = 4;
    uint64 duration_ms = 5;
    bool is_playing = 6;
    string track_id = 7;
    string track_name = 8;
    string artist_name = 9;
    string album_image_src = 10;
}

message SpotifyTokens {
  string access_token = 1;
  string refresh_token = 2;
  /// In seconds - offset from created_at
  uint32 expires_in = 3;
  google.protobuf.Timestamp created_at = 4;
}
